Fixed bug where mobile nav items would wrap and align left. Improved mobile nav responsivness and readability. Added smooth scroll to hero section on index.

--- a/css/index page/header.css
+++ b/css/index page/header.css
@@ -1,4 +1,4 @@
-header {
+.hero-section {
   position: relative;
   overflow: hidden;
 
