--- a/css/nav.css
+++ b/css/nav.css
@@ -9,6 +9,8 @@ nav {
 .primary-nav {
   list-style: none;
 
+  text-align: center;
+
   display: flex;
   gap: 1.5rem;
   align-items: center;
@@ -46,7 +48,7 @@ nav {
   display: none;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
   .primary-nav {
     position: fixed;
     inset: 0 0 0 50%;
@@ -54,7 +56,7 @@ nav {
     border-radius: 0;
 
     flex-direction: column;
-    padding: min(30vh, 10rem) 2rem;
+    padding: min(30vh, 10rem) min(2rem, 4vw);
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
   }
@@ -64,11 +66,11 @@ nav {
   }
 
   .primary-nav a {
-    font-size: min(1.375rem, 4.25vw);
+    font-size: min(1.5rem, 5vw);
   }
 
   .primary-nav .current-site {
-    font-size: min(1.75rem, 4.75vw);
+    font-size: min(1.75rem, 6vw);
   }
 
   .mobile-nav-toggle {
